@@ -259,8 +259,8 @@
 ;; word aligned.
 (define_insn "pic_load_dot_plus_four"
   [(set (match_operand:SI 0 "register_operand" "=r")
-	(unspec:SI [(const (plus:SI (pc) (const_int 4)))
-		    (use (match_operand 1 "" ""))]
+	(unspec:SI [(const_int 4)
+		    (match_operand 1 "" "")]
 		   UNSPEC_PIC_BASE))]
   "TARGET_THUMB2"
   "*
